--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,4 +7,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-
+admin.login=kucherenko
+admin.username=admin
+admin.password=admin123
