html and css were connected to display the results of the work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-admin.login=kucherenko
 admin.username=admin
 admin.password=admin123
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
